--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
-<body>
-	都很舒服会计师看菊花开三等奖
+<body>	
+	<p><input type="text" name=""></p>都很舒服会计师看菊花开三等奖
+
 </body>
 </html>
